
2024-10-29  Franz Holzinger  <franz@ttproducts.de>
    * add compatibility with TYPO3 13

2023-10-17  Franz Holzinger  <franz@ttproducts.de>
    * fix #28: apply GBR to official list

2023-10-12  Franz Holzinger  <franz@ttproducts.de>
    * add Documentation fixes

2023-09-06  Franz Holzinger  <franz@ttproducts.de>
    * compatibility with TYPO3 11 and 12 only

2023-05-03  Franz Holzinger  <franz@ttproducts.de>
    * despite of Breaking no. 87623:
      readd TypoScript/Extbase/setup.txt because static_info_tables static_info_tables 6.9.6 uses the method TYPO3\CMS\Extbase\Configuration\ConfigurationManager::getConfiguration for mapping.

2023-04-18  Franz Holzinger  <franz@ttproducts.de>
    * compatibility with TYPO3 12
    * remove deprecated TypoScript/Extbase/setup.txt

2022-01-25  Franz Holzinger  <franz@ttproducts.de>
    * bugfix issue #19: compatibility with TYPO3 10: Read needed file class.ext_update.php

2022-01-20  Franz Holzinger  <franz@ttproducts.de>
    * compatibility with TYPO3 10: Remove file class.ext_update.php
    * add requirement for the extension addons_em: This is needed for the Extension Manager if the file ext_tables_static+adt.sql has been modified manually by the admin.

2022-01-11  Franz Holzinger  <franz@ttproducts.de>
    * compatibility with PHP 8: Remove the check for a PHP version.

2021-11-30  Wolfgang Baro  <wolfgang.baro@wiminnco.com>
	  * Rename Weißrussland to Belarus

2021-11-30  Franz Holzinger  <franz@ttproducts.de>
    * compatibility with TYPO3 11 issue #18: No other modifications.

2021-07-13  Franz Holzinger  <franz@ttproducts.de>
    * Use the domain jambagecom in the composer.json.

2020-11-24  Franz Holzinger  <franz@ttproducts.de>
    * fix issue #13: Undo part of latest pull request #12 to the former version 10.0 support.

2020-11-18  Sebastian Iffland
    * fix issue #9: Important bugfix to the former version 10.0 support.
    * Simplification of the TCA files.

2020-06-20  Franz Holzinger  <franz@ttproducts.de>