@@ -22,8 +22,8 @@
     "typo3-ter/static-info-tables-de": "self.version"
   },
   "require": {
-    "typo3/cms-core": "^11.5 || ^12 || ^13",
-    "sjbr/static-info-tables": "^11.5 || ^12 || ^13",
+    "typo3/cms-core": "^12 || ^13",
+    "sjbr/static-info-tables": "^12 || ^13",
     "jambagecom/addons-em": "^0.9"
   },
   "extra": {
